# neuralnetwork_fromscratch

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/: assert.h  dataset.h  neural_network.h  tensor.h
src/: CMakeLists.txt  dataset.cpp  main.cpp  neural_network.cpp  tensor.cpp
tests/: CMakeLists.txt  ut_dataset.cpp  ut_nn.cpp  ut_tensor.cpp
